--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,38 @@
+asgi-redis==1.0.0
 asgiref==3.5.2
-bbackports.zoneinfo==0.2.1;python_version<"3.9"
+async-timeout==4.0.2
+autobahn==22.7.1
+Automat==20.2.0
+backports.zoneinfo==0.2.1
+channels==1.0.2
 cloudinary==1.29.0
+constantly==15.1.0
+daphne==3.0.2
+Deprecated==1.2.13
 dj-database-url==1.0.0
 dj3-cloudinary-storage==0.0.6
 Django==4.1.1
+django-autoslug==1.9.8
+django-countries==7.3.2
+django-model-utils==4.2.0
 gunicorn==20.1.0
+hyperlink==21.0.0
+incremental==21.3.0
+msgpack-python==0.5.6
+Pillow==9.2.0
+progressbar2==4.0.0
 psycopg2==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyOpenSSL==22.0.0
+python-utils==3.3.3
+pytz==2022.2.1
+redis==4.3.4
+service-identity==21.1.0
 sqlparse==0.4.2
+swapper==1.3.0
+tqdm==4.64.1
+Twisted==22.8.0
+txaio==22.2.1
+Unidecode==1.3.4
+zope.interface==5.4.0
