--- a/requirements.txt
+++ b/requirements.txt
@@ -7,28 +7,38 @@ backports.zoneinfo;python_version<"3.9"
 channels==1.0.2
 cloudinary==1.29.0
 constantly==15.1.0
+crispy-bootstrap5==0.6
 daphne==3.0.2
 Deprecated==1.2.13
 dj-database-url==1.0.0
 dj3-cloudinary-storage==0.0.6
 Django==4.1.1
+django-allauth==0.51.0
 django-autoslug==1.9.8
+django-braces==1.15.0
 django-countries==7.3.2
+django-crispy-forms==1.14.0
 django-model-utils==4.2.0
+django-sslserver==0.22
 gunicorn==20.1.0
 hyperlink==21.0.0
 incremental==21.3.0
 msgpack-python==0.5.6
+oauthlib==3.2.1
 Pillow==9.2.0
 progressbar2==4.0.0
 psycopg2==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+PyJWT==2.4.0
 pyOpenSSL==22.0.0
 python-utils==3.3.3
+python3-openid==3.2.0
 pytz==2022.2.1
 redis==4.3.4
+requests-oauthlib==1.3.1
 service-identity==21.1.0
+sorl-thumbnail==12.9.0
 sqlparse==0.4.2
 swapper==1.3.0
 tqdm==4.64.1
