--- a/frontend_chat/package.json
+++ b/frontend_chat/package.json
@@ -11,17 +11,21 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.2",
+    "css-loader": "^6.7.1",
+    "postcss-loader": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.2.0",
+    "style-loader": "^3.3.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "babel --out-dir dist src/components --extensions '.ts,.tsx'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
