--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-compare": "^2.0.4",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-is": "^16.13.1",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
