--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,12 @@ django-braces==1.15.0
 django-countries==7.3.2
 django-crispy-forms==1.14.0
 django-model-utils==4.2.0
+django-redis==5.2.0
 django-sslserver==0.22
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 gunicorn==20.1.0
+heroku==0.1.4
 hyperlink==21.0.0
 incremental==21.3.0
 msgpack==1.0.4
@@ -36,6 +38,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyJWT==2.4.0
 pyOpenSSL==22.0.0
+python-dateutil==1.5
 python-utils==3.3.3
 python3-openid==3.2.0
 pytz==2022.2.1
