--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "hoist-non-react-statics": "^3.3.2",
+    "jquery": "^3.6.3",
     "js-tokens": "^4.0.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -29,20 +30,26 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "scheduler": "^0.23.0",
+    "text-encoding": "^0.7.0",
     "tiny-warning": "^1.0.3",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^8.2.5",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jsdom": "^20.0.3",
+    "jsdom-global": "^3.0.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack --mode development --watch"
   },
   "repository": {
@@ -55,5 +62,14 @@
   "bugs": {
     "url": "https://github.com/oks-erm/help-u/issues"
   },
-  "homepage": "https://github.com/oks-erm/help-u#readme"
+  "homepage": "https://github.com/oks-erm/help-u#readme",
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.js",
+      "**/*.test.js"
+    ]
+  },
+  "transform": {
+    "^.+\\.js$": "babel-jest"
+  }
 }
