--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 asgi-redis==1.0.0
 asgiref==3.5.2
+async-generator==1.10
 async-timeout==4.0.2
 autobahn==22.7.1
 Automat==20.2.0
-backports.zoneinfo;python_version<"3.9"
+backports.zoneinfo==0.2.1
+browserstack-local==1.2.4
+browserstack-sdk==1.3.1
 channels==4.0.0
 channels-redis==4.0.0
 cloudinary==1.29.0
 constantly==15.1.0
+coverage==7.0.1
 crispy-bootstrap5==0.6
+cryptography==38.0.4
 daphne==4.0.0
 Deprecated==1.2.13
 dj-database-url==1.0.0
@@ -24,32 +29,44 @@ django-redis==5.2.0
 django-sslserver==0.22
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+exceptiongroup==1.1.0
 gunicorn==20.1.0
+h11==0.14.0
 heroku==0.1.4
 hyperlink==21.0.0
 incremental==21.3.0
+jsonpath-ng==1.5.3
 msgpack==1.0.4
 msgpack-python==0.5.6
 oauthlib==3.2.1
+outcome==1.2.0
 Pillow==9.2.0
+ply==3.11
 progressbar2==4.0.0
 psycopg2==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyJWT==2.4.0
-pyOpenSSL==22.0.0
+pyOpenSSL==23.0.0
+PySocks==1.7.1
 python-dateutil==1.5
 python-utils==3.3.3
 python3-openid==3.2.0
 pytz==2022.2.1
 redis==4.3.4
 requests-oauthlib==1.3.1
+selenium==4.7.2
 service-identity==21.1.0
+sniffio==1.3.0
 sorl-thumbnail==12.9.0
+sortedcontainers==2.4.0
 sqlparse==0.4.2
 swapper==1.3.0
 tqdm==4.64.1
+trio==0.22.0
+trio-websocket==0.9.2
 Twisted==22.8.0
 txaio==22.2.1
 Unidecode==1.3.4
+wsproto==1.2.0
 zope.interface==5.4.0
