--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ async-generator==1.10
 async-timeout==4.0.2
 autobahn==22.7.1
 Automat==20.2.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 browserstack-local==1.2.4
 browserstack-sdk==1.3.1
 channels==4.0.0
