--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "aos": "^2.3.4",
     "asynckit": "^0.4.0",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "combined-stream": "^1.0.8",
     "deepmerge": "^2.2.1",
     "delayed-stream": "^1.0.0",
+    "expose-loader": "^4.0.0",
     "follow-redirects": "^1.15.2",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
@@ -42,12 +44,19 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "babel-jest": "^29.3.1",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "^8.3.0",
+    "css-loader": "^6.7.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "jsdom": "^20.0.3",
     "jsdom-global": "^3.0.2",
-    "webpack": "^5.74.0",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^7.8.3",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
